modified:   Makefile 	modified:   converters.cpp 	modified:   test.cpp

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,12 @@
 all: test
 
 test: test.o converters.o
-	g++ test.o converters.o -o test
+	g++ test.o converters.o -o test -std=c++11
 
 converters.o:
-	g++ -c converters.cpp
+	g++ -c converters.cpp -std=c++11
 test.o:
-	g++ -c test.cpp
+	g++ -c test.cpp -std=c++11
 
 clean:
 	rm -rf *.o test
