--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
-all: clean test
+all: test
 
 test: test.o converters.o
 	g++ test.o converters.o -o test -std=c++11
 
-converters.o:
+converters.o: converters.cpp
 	g++ -c converters.cpp -std=c++11
-test.o:
+test.o: test.cpp
 	g++ -c test.cpp -std=c++11
 
 clean:
